# cdp-generator

./: .flake8  .gitignore  MANIFEST.in  Makefile  README.md  REPO_STRUCTURE.md  cdp-generator.py  cdp-strainrate.py  pyproject.toml  setup.py
cdp_generator/: __init__.py  cli.py  compression.py  core.py  export.py  material_properties.py  plotting.py  strain_rate.py  temperature.py  tension.py
cdp_generator/steel/: __init__.py  cli.py  export.py  johnson_cook.py  plotting.py  standards.py
docs/audits/: uv_migration_report.md
tests/: __init__.py  test_basic.py  test_steel.py
